# FastApiProject

fastapi_project/: pyproject.toml
fastapi_project/fast_zero/: app.py
